--- a/src/index.css
+++ b/src/index.css
@@ -599,6 +599,38 @@ video {
   border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 }
 
+input {
+  display: block;
+  border-radius: 0.25rem;
+  border-width: 2px;
+}
+
+input:focus {
+  border-color: transparent;
+}
+
+input {
+  padding: 0.375rem;
+}
+
+input:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgba(147, 197, 253, var(--tw-ring-opacity));
+}
+
+label{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgba(107, 114, 128, var(--tw-text-opacity))
+}
+
 .container {
   width: 100%;
 }
